# warrior-bot

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  documentation.md  ideas.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature_request.md
.github/workflows/: lint.yml  tests.yml  types.yml
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  documentation.md  index.md  overview.md
documentation/: index.html
overview/: index.html
search/: search_index.json
styles/: override.css
tests/: test_locations_json.py
warrior_bot/: __init__.py  cli.py
warrior_bot/core/: about.py  data_handler.py  refresh.py  where.py
warrior_bot/data/: faculty_cache.json  locations.json
warrior_bot/utils/: extract_staff.py  faculty_lookup.py  faculty_parser.py
